tests/rosetta/out/Dart/associative-array-merging.error
run error: exit status 254
../../tests/rosetta/out/Dart/associative-array-merging.dart:20:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:13:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:2:13: Error: Type 'any' not found.
Map<String, any> merge(Map<String, any> base, Map<String, any> update) {
            ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:2:36: Error: Type 'any' not found.
Map<String, any> merge(Map<String, any> base, Map<String, any> update) {
                                   ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:2:59: Error: Type 'any' not found.
Map<String, any> merge(Map<String, any> base, Map<String, any> update) {
                                                          ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:2:36: Error: 'any' isn't a type.
Map<String, any> merge(Map<String, any> base, Map<String, any> update) {
                                   ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:2:59: Error: 'any' isn't a type.
Map<String, any> merge(Map<String, any> base, Map<String, any> update) {
                                                          ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:3:15: Error: 'any' isn't a type.
  Map<String, any> result = {};
              ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:3:29: Error: A value of type 'Map<dynamic, dynamic>' can't be assigned to a variable of type 'Map<String, invalid-type>'.
 - 'Map' is from 'dart:core'.
  Map<String, any> result = {};
                            ^
../../tests/rosetta/out/Dart/associative-array-merging.dart:14:15: Error: 'any' isn't a type.
  Map<String, any> base = {'name': 'Rocket Skates', 'price': 12.75, 'color': 'yellow'};
              ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:15:15: Error: 'any' isn't a type.
  Map<String, any> update = {'price': 15.25, 'color': 'red', 'year': 1974};
              ^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:21:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/associative-array-merging.dart:45:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:74:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:79:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/associative-array-merging.dart:83:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
